--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
   "framework": "nextjs",
   "regions": ["hkg1"],
   "env": {
-    "GROK_API_BASE_URL": "https://api.groq.com/openai/v1",
-    "GROK_MODEL": "llama3-8b-8192",
+    "GROK_API_BASE_URL": "https://api.x.ai/v1",
+    "GROK_MODEL": "grok-3-mini",
     "USE_MOCK_RESPONSE": "false"
   },
   "headers": [
