Update model name to grok-3-mini-beta

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "regions": ["hkg1"],
   "env": {
     "GROK_API_BASE_URL": "https://api.x.ai/v1",
-    "GROK_MODEL": "grok-3-mini",
+    "GROK_MODEL": "grok-3-mini-beta",
     "USE_MOCK_RESPONSE": "false"
   },
   "headers": [
